--- a/oarepo_ui/theme/assets/semantic-ui/less/oarepo_ui/definitions/page_footer.less
+++ b/oarepo_ui/theme/assets/semantic-ui/less/oarepo_ui/definitions/page_footer.less
@@ -43,18 +43,7 @@ name of the component from above)
     padding: @pageFooterPadding;
 
     & .ui.container {
-      width: 1241px;
       padding: 1rem 0;
-      @media only screen and (min-width: @largeMonitorBreakpoint) {
-        width: 1400px;
-      }
-      @media only screen and (max-width: @largestTabletScreen) {
-        width: 723px;
-      }
-      @media only screen and (max-width: @tabletBreakpoint) {
-        padding: 1rem 1rem 0;
-        max-width: 723px;
-      }
     }
   }
 }
